# SDL2-Study

./: CMakeLists.txt  README.md
01_HelloWorld/: CMakeLists.txt  HelloWorld.cpp
02_LoadImage/: CMakeLists.txt  LoadImage.cpp
